optimize asciidoc plugin configuration